style.css
* {
  box-sizing: border-box;
}

body {
  padding: 0 5px 0 5px;
  margin: 0;
}

p {
  padding: 0;
  margin: 0;
}

nav {
  display: flex;
  position: fixed;
  width: 100vw;
  background-color: white;
  height: 70px;
  align-items: center;
  justify-content: space-around;
  padding: 5px 0 5px 0;
  border-bottom: 2px solid black;
}

.shop-title {
  font-family: 'Glass Antiqua', cursive;
  font-size: 60px;
  margin: 0;
}

.shop-title:hover {
  cursor: pointer;
}

.shop-sections {
  display: flex;
  height: 100%;
  width: 40%;
  padding: 0;
  border-left: 1px solid black;
}

.shop-sections li {
  list-style: none;
  flex: 1;
}

.shop-sections button {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0);
  border: none;
  border-right: 1px solid black;
  font-family: 'Neuton', serif;
}

.shop-section button:hover {
  background-color: rgba(0, 0, 0, .03);
  cursor: pointer;
}

.dropdown {
  display: block;
  background-color: white;
  width: 170px;
  height: 0;
  overflow: hidden;
  position: absolute;
}

.shop-section:hover .dropdown {
  display: flex;
  height: 150px;
  padding: 5px;
  border: 1px solid black;
  border-top: none;
  transition: height .3s ease-in-out;
}

.dropdown ul {
  display: flex;
  flex-direction: column;
  gap: 15px;
  padding: 10px;
}

.dropdown button {
  display: flex;
  flex-direction: column;
  padding: 0;
  font-family: 'Raleway', sans-serif;
  font-size: 15px;
  border: none;
  background-color: transparent;
  color: rgb(63, 63, 63)
}

.dropdown button:hover {
  background-color: transparent;
}

.search-bar-container {
  display: flex;
  flex: .5;
  height: 100%;
  justify-content: center;
  align-items: center;
}

.search-bar {
  height: 70%;
  width: 100%;
  border-radius: 10px;
  border: 1px solid black;
  padding: 5px;
  outline: none;
}

.icons-list {
  display: flex;
  flex: .2;
  justify-content: space-between;
  padding: 0;
}

.icons-list li {
  list-style: none;
}

.icons-list button {
  display: flex;
  cursor: pointer;
  background-color: transparent;
  border: none;
}

.sign-in-dropdown {
  display: none;
  flex-direction: column;
  position: absolute;
  border: 1px solid black;
  margin-top: 25px;
  right: 10px;
  padding: 15px;
  gap: 15px;
  background-color: white;
}

.sign-in-dropdown p {
  margin: 0;
  font-size: 1.7rem;
}

.sign-in-dropdown input {
  outline: none;
}

.favourites-dropdown {
  display: none;
  flex-direction: column;
  position: absolute;
  border: 1px solid black;
  margin-top: 25px;
  right: 10px;
  padding: 10px;
  gap: 10px;
  width: 300px;
  height: 400px;
  background-color: white;
}

.favourites-items {
  display: flex;
  overflow: scroll;
  flex-direction: column;
}

.favourites-dropdown-heading {
  border-bottom: 1px solid black;
}

.favourites-dropdown-heading p {
  margin: 0;
  font-size: 1.7rem;
}

.favourites-dropdown img {
  border: 1px solid black;
  border-radius: 4px;
  width: 65px;
  height: 75px;
}

.favourites-item {
  display: flex;
  gap: 15px;
  justify-content: center;
  align-items: center;
}

.basket-dropdown {
  display: none;
  flex-direction: column;
  width: 300px;
  height: 400px;
  position: absolute;
  background-color: white;
  border: 1px solid black;
  margin-top: 25px;
  right: 10px;
  padding: 10px;
}

.basket-dropdown-heading {
  font-size: 1.7rem;
  display: flex;
  padding: 10px;
  margin: 0;
  border-bottom: 1px solid black;
  flex: .1;
}

.basket-dropdown p {
  padding: 0;
  margin: 0;
}

.basket-items {
  display: flex;
  border-bottom: 1px solid black;
  flex: .8;
  overflow: scroll;
  padding: 10px;
  flex-direction: column;
  gap: 10px;
}

.basket-item {
  display: flex;
  width: 100%;
  height: 100px;
  padding: 2px;
}

.basket-item:hover {
  background-color: rgba(0, 0, 0, .03);
}

.basket-item-img-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100px;
  flex: 1;
}

.basket-item-img-container img {
  border: 1px solid black;
  border-radius: 4px;
  width: 65px;
  height: 75px;
}

.basket-item-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  flex: 1;
}

.close-btn-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: .7;
}

.basket-total {
  display: flex;
  padding: 10px;
  font-size: 1.2rem;
  align-items: center;
  flex: .1;
}

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 500,
  'GRAD' 0,
  'opsz' 24
}

.material-symbols-outlined:hover {
  font-variation-settings: 
  'FILL' 1
}

main {
  display: flex;
}

.main-display {
  display: none;
  width: 2000px;
  height: 1000px;
  justify-content: space-around;
  align-items: center;
  overflow: hidden;
}

.main-display button {
  background-color: transparent;
  border: 5px solid black;
  width: 150px;
  padding: 10px;
  position: absolute;
  z-index: 1;
}

.main-display button:hover {
  cursor: pointer;
  color: white;
  background-color: black;
}

.main-display h2 {
  margin: 0;
}

.main-display-left, .main-display-right {
  display: flex;
  width: 50%;
  justify-content: center;
  align-items: center;
}

.main-display img {
  width: 100%;
  overflow: hidden;
}

.vertical-line {
  padding: 0;
  margin: 0;
  border-left: 2px solid black;
  height: 100%;
  width: 0;
}

.products-display {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 100px;
  margin-bottom: 50px;
}

.section-nav-heading {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.section-nav-heading button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
}

.men-bestsellers {
  display: grid;
  gap: 30px;
  grid-template-columns: repeat(3, 1fr);
}

.product-container {
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  width: 300px;
  height: 350px;
  border-radius: 3px;
}

.product-img {
  display: flex;
  justify-content: end;
  align-items: start;
  border-bottom: 1px solid black;
  height: 80%;
  width: 100%;
  overflow: hidden;
}

.product-img button {
  background-color: transparent;
  border: none;
  cursor: pointer;
  position: absolute;
}

.product-img img {
  position: relative;
  width: 100%;
}

.product-footer {
  display: flex;
  flex-direction: column;
  height: 20%;
}

.product-footer-top {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  font-size: 15px;
}

.product-footer-bottom {
  display: flex;
  justify-content: space-between;
  padding: 0 10px 0 10px;
  align-items: center;
}

.product-footer input {
  width: 30px;
}

.product-footer-bottom button {
  height: 100%;
  background-color: transparent;
  cursor: pointer;
}

